# share-secret

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  deploy.yml  test.yml
docs/superpowers/plans/: 2026-06-15-share-secret-implementation-plan.md  2026-06-16-owner-edit-shares.md  2026-06-16-postgresql-support.md  2026-06-16-production-postgres-overlay.md  2026-06-16-share-export-import.md  2026-06-16-share-management-ux.md  2026-06-16-verification-code-and-rate-limit.md  2026-06-16-view-password-implementation-plan.md
docs/superpowers/specs/: 2026-06-15-share-secret-design.md  2026-06-16-edit-password-autofill-and-toggle-design.md  2026-06-16-owner-edit-shares-design.md  2026-06-16-postgresql-support-design.md  2026-06-16-production-postgres-overlay-design.md  2026-06-16-share-export-import-design.md  2026-06-16-verification-code-and-rate-limit-design.md
k8s/: README.md
k8s/base/: deployment.yaml  gateway.yaml  httproute.yaml  kustomization.yaml  pvc.yaml  service.yaml
k8s/overlays/production/: kustomization.yaml  namespace.yaml  patch-drop-pvc.yaml  patch-postgres.yaml
src/: auth.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  security.rs
src/handlers/: auth.rs  dashboard.rs  mod.rs  share.rs
static/: crypto.js  ui.js
templates/: base.html  dashboard.html  index.html  login.html  new_share.html  register.html  share_created.html  view_share.html
tests/: integration_test.rs  postgres_test.rs
